--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.51",
     "@types/react": "^18.2.21",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "^18.2.7",
+    "@types/react-redux": "^7.1.26",
+    "date-fns": "^2.30.0",
+    "google-map-react": "^2.2.1",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-redux": "^8.1.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "sass": "^1.67.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
